5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4380/executions/1692_1105.log
== TEST (2019-04-30 19:53:50) 
-- CODE:
b=input("Brasao: ")
print("Entrada:",b)
if (b=lobo):
	print("Casa: Stark")
elif (b=leao):
	print("Casa: Lannister")
elif (b=veado):
	print("Casa: Baratheon")
elif (b=dragao):
	print("Casa: Targaryen")
elif (b=rosa):
	print("Casa: Tyrell")
elif (b=sol):
	print("Casa: Martell")
elif (b=lula):
	print("Casa: Greyjoy")
elif (b=esfolado):
	print("Casa: Bolton")
elif (b=turta):
	print("Casa: Tully")
elif (b!=lobo or b!=leao or b!=veado or b!=dragao or b!=rosa or b!=sol or b!=lula or b!=esfolado or b!=turta):
	print("Brasao invalido")
-- ERROR:
File "XXXX", line 3
    if (b=lobo):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:54:13) 
-- CODE:
b=input("Brasao: ")
print("Entrada:",b)
if (b==lobo):
	print("Casa: Stark")
elif (b=leao):
	print("Casa: Lannister")
elif (b=veado):
	print("Casa: Baratheon")
elif (b=dragao):
	print("Casa: Targaryen")
elif (b=rosa):
	print("Casa: Tyrell")
elif (b=sol):
	print("Casa: Martell")
elif (b=lula):
	print("Casa: Greyjoy")
elif (b=esfolado):
	print("Casa: Bolton")
elif (b=turta):
	print("Casa: Tully")
elif (b!=lobo or b!=leao or b!=veado or b!=dragao or b!=rosa or b!=sol or b!=lula or b!=esfolado or b!=turta):
	print("Brasao invalido")
-- ERROR:
File "XXXX", line 5
    elif (b=leao):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:54:32) 
-- CODE:
b=input("Brasao: ")
print("Entrada:",b)
if (b==lobo):
	print("Casa: Stark")
elif (b==leao):
	print("Casa: Lannister")
elif (b==veado):
	print("Casa: Baratheon")
elif (b==dragao):
	print("Casa: Targaryen")
elif (b==rosa):
	print("Casa: Tyrell")
elif (b==sol):
	print("Casa: Martell")
elif (b==lula):
	print("Casa: Greyjoy")
elif (b==esfolado):
	print("Casa: Bolton")
elif (b==turta):
	print("Casa: Tully")
elif (b!=lobo or b!=leao or b!=veado or b!=dragao or b!=rosa or b!=sol or b!=lula or b!=esfolado or b!=turta):
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (b==lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:55:19) 
-- CODE:
b=input("Brasao: ")
print("Entrada:",b)
if (b=="lobo"):
	print("Casa: Stark")
elif (b==leao):
	print("Casa: Lannister")
elif (b==veado):
	print("Casa: Baratheon")
elif (b==dragao):
	print("Casa: Targaryen")
elif (b==rosa):
	print("Casa: Tyrell")
elif (b==sol):
	print("Casa: Martell")
elif (b==lula):
	print("Casa: Greyjoy")
elif (b==esfolado):
	print("Casa: Bolton")
elif (b==turta):
	print("Casa: Tully")
elif (b!=lobo or b!=leao or b!=veado or b!=dragao or b!=rosa or b!=sol or b!=lula or b!=esfolado or b!=turta):
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    elif (b==leao):
NameError: name 'leao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:57:46) 
-- CODE:
b=input("Brasao: ")
print("Entrada:",b)
if (b=="lobo"):
	print("Casa: Stark")
elif (b=="leao"):
	print("Casa: Lannister")
elif (b=="veado"):
	print("Casa: Baratheon")
elif (b=="dragao"):
	print("Casa: Targaryen")
elif (b=="rosa"):
	print("Casa: Tyrell")
elif (b=="sol"):
	print("Casa: Martell")
elif (b=="lula"):
	print("Casa: Greyjoy")
elif (b=="esfolado"):
	print("Casa: Bolton")
elif (b=="turta"):
	print("Casa: Tully")
elif (b!="lobo" or b!="leao" or b!="veado" or b!="dragao" or b!="rosa" or b!="sol" or b!="lula" or b!="esfolado" or b!="turta"):
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:58:04) 
-- CODE:
b=input("Brasao: ")
print("Entrada:",b)
if (b=="lobo"):
	print("Casa: Stark")
elif (b=="leao"):
	print("Casa: Lannister")
elif (b=="veado"):
	print("Casa: Baratheon")
elif (b=="dragao"):
	print("Casa: Targaryen")
elif (b=="rosa"):
	print("Casa: Tyrell")
elif (b=="sol"):
	print("Casa: Martell")
elif (b=="lula"):
	print("Casa: Greyjoy")
elif (b=="esfolado"):
	print("Casa: Bolton")
elif (b=="turta"):
	print("Casa: Tully")
elif (b!="lobo" or b!="leao" or b!="veado" or b!="dragao" or b!="rosa" or b!="sol" or b!="lula" or b!="esfolado" or b!="turta"):
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:58:11) 
-- CODE:
b=input("Brasao: ")
print("Entrada:",b)
if (b=="lobo"):
	print("Casa: Stark")
elif (b=="leao"):
	print("Casa: Lannister")
elif (b=="veado"):
	print("Casa: Baratheon")
elif (b=="dragao"):
	print("Casa: Targaryen")
elif (b=="rosa"):
	print("Casa: Tyrell")
elif (b=="sol"):
	print("Casa: Martell")
elif (b=="lula"):
	print("Casa: Greyjoy")
elif (b=="esfolado"):
	print("Casa: Bolton")
elif (b=="turta"):
	print("Casa: Tully")
elif (b!="lobo" or b!="leao" or b!="veado" or b!="dragao" or b!="rosa" or b!="sol" or b!="lula" or b!="esfolado" or b!="turta"):
	print("Brasao invalido")
-- EXECUTION TIME:
0.17694
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
